5.0/deployment-zabbix-server-pgsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server-pgsql
  labels:
    app: zabbix-server-pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server-pgsql
  template:
    metadata:
      annotations: 
        iam.amazonaws.com/role: arn:aws:iam::346367625676:role/terraform_zabbix2
      labels:
        app: zabbix-server-pgsql
      name: zabbix-server-pgsql
    spec:
      containers:
      - image: aust1713/z5.0-alpine-libs:v2
        name: zabbix-server-pgsql
        ports:
        - containerPort: 10050
          name: zabbix-passive
        - containerPort: 10051
          name: zabbix-active
        volumeMounts:
          - mountPath: "/usr/lib/zabbix/externalscripts"
            name: zabbix-server-pgsql
            subPath: externalscripts
      volumes:
        - name: zabbix-server-pgsql
          persistentVolumeClaim:
            claimName: zabbix-server-pgsql
