5.0/deployment-zabbix-web-nginx-pgsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-nginx-pgsql
  labels:
    app: zabbix-web-nginx-pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-web-nginx-pgsql
  template:
    metadata:
      labels:
        app: zabbix-web-nginx-pgsql
      name: zabbix-web-nginx-pgsql
    spec:
      volumes:
        - name: zabbix-web-nginx-pgsql
          persistentVolumeClaim:
            claimName: zabbix-web-nginx-pgsql
      containers:
      - image: zabbix/zabbix-web-nginx-pgsql:alpine-trunk
        name: zabbix-web-nginx-pgsql
        ports:
        - containerPort: 80
          name: zabbix-web
        - containerPort: 10051
          name: zabbix-internal
        volumeMounts:
          - mountPath: "/etc/ssl/nginx"
            name: zabbix-web-nginx-pgsql
