5.0/svc-clusterip-zabbix-web-80.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zabbix-web-nginx-pgsql
  name: zabbix-web-nginx-pgsql-clusterip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: zabbix-web-nginx-pgsql
