5.0/svc-zabbix-postgres-5432.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zabbix-postgres
  name: zabbix-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    service: zabbix-postgres
