5.0/virtualservice-zabbix-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zabbix
spec:
  hosts:
  - "*"
  gateways:
  - zabbix-gateway
  http:
  - match:
    - port: 37373
    route:
    - destination:
        port:
          number: 80
        host: zabbix-web-nginx-pgsql-clusterip
  tcp:
  - match:
    - port: 10051
    route:
    - destination:
        port:
          number: 10051
        host: zabbix-server-pgsql-clusterip
